--- a/williaikuma/assets/locales/base.pot
+++ b/williaikuma/assets/locales/base.pot
@@ -1,207 +1,156 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR ORGANIZATION
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2023-04-14 16:38+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2023-04-16 00:53+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: pygettext.py 1.5\n"
 
-
-#: ./audio/ThreadedAudio.py:39
-msgid "Error while reading the WAVE file. {}"
-msgstr ""
-
-#: ./controllers/Controller.py:55
-msgid "Unable to start the session!"
-msgstr ""
-
-#: ./controllers/Controller.py:55 ./controllers/Controller.py:137
-#: ./controllers/Controller.py:150 ./controllers/Controller.py:159
-#: ./controllers/Controller.py:170 ./controllers/Controller.py:202
-#: ./controllers/Controller.py:261
-msgid "Error!"
-msgstr ""
-
-#: ./controllers/Controller.py:119
-msgid "Enter speaker's name"
-msgstr ""
-
-#: ./controllers/Controller.py:119
-msgid "Speaker?"
-msgstr ""
-
-#: ./controllers/Controller.py:137
-msgid "Couldn't create this session!"
-msgstr ""
-
-#: ./controllers/Controller.py:150 ./controllers/Controller.py:159
-msgid "Couldn't open this session!"
-msgstr ""
-
-#: ./controllers/Controller.py:165
-msgid ""
-"Done! ({} generated, {} failures)\n"
-msgstr ""
-
-#: ./controllers/Controller.py:165
-msgid "Information"
-msgstr ""
-
-#: ./controllers/Controller.py:170
-msgid "There was a problem when generating the TextGrid files."
-msgstr ""
-
-#: ./controllers/Controller.py:202
-msgid "Unknown error!"
-msgstr ""
-
-#: ./controllers/Controller.py:216 ./controllers/Controller.py:232
-msgid "Delete this recording?"
-msgstr ""
-
-#: ./controllers/Controller.py:216 ./controllers/Controller.py:232
-#: ./views/MainView.py:139
-msgid "Delete"
-msgstr ""
-
-#: ./controllers/Controller.py:261
-msgid "There is a problem with this recording!"
-msgstr ""
-
-#: ./controllers/Controller.py:276 ./models/Session.py:44
-#: ./models/Session.py:55 ./models/Tasks.py:34
-msgid "Unknown type of task `{}`."
-msgstr ""
-
-#: ./models/AbstractDataProvider.py:48
-msgid "Index can only be an integer!"
-msgstr ""
-
-#: ./models/AbstractDataProvider.py:49
-msgid "Index can't be negative ({})!"
-msgstr ""
-
-#: ./models/AbstractSession.py:109
-msgid "Value between existing metadata file and new metadata differ ({} v. {})"
-msgstr ""
-
-#: ./models/Application.py:85
-msgid "Default (English)"
-msgstr ""
-
-#: ./models/DataProviderText.py:32
-msgid "' ## ' not found on line {}."
-msgstr ""
-
-#: ./views/MainView.py:69
-msgid "New Text Elicitation"
-msgstr ""
-
-#: ./views/MainView.py:70
-msgid "New Respeaking"
-msgstr ""
-
-#: ./views/MainView.py:71
-msgid "New"
-msgstr ""
-
-#: ./views/MainView.py:72
-msgid "Open"
-msgstr ""
-
-#: ./views/MainView.py:75
-msgid "Recent"
-msgstr ""
-
-#: ./views/MainView.py:77
-msgid "Exit"
-msgstr ""
-
-#: ./views/MainView.py:78
-msgid "File"
-msgstr ""
-
-#: ./views/MainView.py:82
-msgid "View Missing Items"
-msgstr ""
-
-#: ./views/MainView.py:85
-msgid "Generate TextGrid"
-msgstr ""
-
-#: ./views/MainView.py:88
-msgid "Data"
-msgstr ""
-
-#: ./views/MainView.py:93
-msgid "Default Session Directory"
-msgstr ""
-
-#: ./views/MainView.py:94
-msgid "Preferences"
-msgstr ""
-
-#: ./views/MainView.py:98
-msgid "Language"
-msgstr ""
-
-#: ./views/MainView.py:106
-msgid "Record"
-msgstr ""
-
-#: ./views/MainView.py:150
-msgid "Play"
-msgstr ""
-
-#: ./views/MainView.py:161
-msgid "Respeak"
-msgstr ""
-
-#: ./views/MainView.py:191
-msgid "Create a new project or open an existing one."
-msgstr ""
-
-#: ./views/MainView.py:195
-msgid "Waiting..."
-msgstr ""
-
-#: ./views/MainView.py:279
-msgid "Line: {} | Speaker: {} | Session: {}"
-msgstr ""
-
-#: ./views/MainView.py:379 ./views/MainView.py:391
-msgid "None"
-msgstr ""
-
-#: ./views/MainView.py:382 ./views/MainView.py:393
-msgid "Reset"
-msgstr ""
-
-#: ./views/MainView.py:411
-msgid "Choose a file"
-msgstr ""
-
-#: ./views/MainView.py:412
-msgid "Files"
-msgstr ""
-
-#: ./views/MissingView.py:33 ./views/MissingView.py:70
-msgid "Missing items"
-msgstr ""
-
-#: ./views/MissingView.py:51
-msgid "Go"
-msgstr ""
-
-#: ./views/MissingView.py:61
 msgid "Cancel"
 msgstr ""
 
+msgid "Delete"
+msgstr ""
+
+msgid "Go"
+msgstr ""
+
+msgid "Play"
+msgstr ""
+
+msgid "Record"
+msgstr ""
+
+msgid "Respeak"
+msgstr ""
+
+msgid "Couldn't create this session!"
+msgstr ""
+
+msgid "There was a problem when generating the TextGrid files."
+msgstr ""
+
+msgid "Couldn't open this session!"
+msgstr ""
+
+msgid "There is a problem with this recording!"
+msgstr ""
+
+msgid "Unable to start the session!"
+msgstr ""
+
+msgid "Unknown error!"
+msgstr ""
+
+msgid "Index can't be negative ({})!"
+msgstr ""
+
+msgid "Index can only be an integer!"
+msgstr ""
+
+msgid "' ## ' not found on line {}."
+msgstr ""
+
+msgid "Error while reading the WAVE file. {}"
+msgstr ""
+
+msgid "Unknown type of task `{}`."
+msgstr ""
+
+msgid "Value between existing metadata file and new metadata differ ({} v. {})"
+msgstr ""
+
+msgid "Data"
+msgstr ""
+
+msgid "Default Session Directory"
+msgstr ""
+
+msgid "Exit"
+msgstr ""
+
+msgid "File"
+msgstr ""
+
+msgid "Generate TextGrid"
+msgstr ""
+
+msgid "Language"
+msgstr ""
+
+msgid "Default ({})"
+msgstr ""
+
+msgid "View Missing Items"
+msgstr ""
+
+msgid "New"
+msgstr ""
+
+msgid "New Respeaking"
+msgstr ""
+
+msgid "New Text Elicitation"
+msgstr ""
+
+msgid "None"
+msgstr ""
+
+msgid "Open"
+msgstr ""
+
+msgid "Preferences"
+msgstr ""
+
+msgid "Recent"
+msgstr ""
+
+msgid "Reset"
+msgstr ""
+
+msgid "Line: {} | Speaker: {} | Session: {}"
+msgstr ""
+
+msgid "Waiting..."
+msgstr ""
+
+msgid "Create a new project or open an existing one."
+msgstr ""
+
+msgid "Files"
+msgstr ""
+
+msgid "Done! ({} generated, {} failures)\n"
+msgstr ""
+
+msgid "Missing items"
+msgstr ""
+
+msgid "Delete this recording?"
+msgstr ""
+
+msgid "Enter speaker's name"
+msgstr ""
+
+msgid "The application will have to restart to apply the changes. Restart?"
+msgstr ""
+
+msgid "Choose a file"
+msgstr ""
+
+msgid "Error!"
+msgstr ""
+
+msgid "Information"
+msgstr ""
