--- a/williaikuma/assets/locales/es/LC_MESSAGES/base.po
+++ b/williaikuma/assets/locales/es/LC_MESSAGES/base.po
@@ -5,8 +5,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2023-04-14 16:35+0200\n"
-"PO-Revision-Date: 2023-04-14 16:37+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2023-04-16 00:53+0200\n"
+"PO-Revision-Date: 2023-04-16 00:54+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -15,195 +16,148 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: pygettext.py 1.5\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 3.2.2\n"
 
-#: audio/ThreadedAudio.py:39
-msgid "Error while reading the WAVE file. {}"
-msgstr "Error al leer el archivo WAVE. {}"
+msgid "Cancel"
+msgstr "Cancelar"
 
-#: controllers/Controller.py:55
-msgid "Unable to start the session!"
-msgstr "¡No se puede iniciar la sesión!"
-
-#: controllers/Controller.py:55 controllers/Controller.py:137
-#: controllers/Controller.py:150 controllers/Controller.py:159
-#: controllers/Controller.py:170 controllers/Controller.py:202
-#: controllers/Controller.py:261
-msgid "Error!"
-msgstr "¡Error!"
-
-#: controllers/Controller.py:119
-msgid "Enter speaker's name"
-msgstr "Introduzca el nombre del hablante"
-
-#: controllers/Controller.py:119
-msgid "Speaker?"
-msgstr "¿Hablante?"
-
-#: controllers/Controller.py:137
-msgid "Couldn't create this session!"
-msgstr "¡No se ha podido crear esta sesión!"
-
-#: controllers/Controller.py:150 controllers/Controller.py:159
-msgid "Couldn't open this session!"
-msgstr "¡No se ha podido abrir esta sesión!"
-
-#: controllers/Controller.py:165
-msgid "Done! ({} generated, {} failures)\n"
-msgstr "¡Hecho! ({} generados, {} fallos)\n"
-
-#: controllers/Controller.py:165
-msgid "Information"
-msgstr "Información"
-
-#: controllers/Controller.py:170
-msgid "There was a problem when generating the TextGrid files."
-msgstr "Hubo un problema al generar los archivos TextGrid."
-
-#: controllers/Controller.py:202
-msgid "Unknown error!"
-msgstr "¡Error desconocido!"
-
-#: controllers/Controller.py:216 controllers/Controller.py:232
-msgid "Delete this recording?"
-msgstr "¿Borrar esta grabación?"
-
-#: controllers/Controller.py:216 controllers/Controller.py:232
-#: views/MainView.py:139
 msgid "Delete"
 msgstr "Borrar"
 
-#: controllers/Controller.py:261
+msgid "Go"
+msgstr "Ir"
+
+msgid "Play"
+msgstr "Reproducir"
+
+msgid "Record"
+msgstr "Registro"
+
+msgid "Respeak"
+msgstr "Volver a hablar"
+
+msgid "Couldn't create this session!"
+msgstr "¡No se ha podido crear esta sesión!"
+
+msgid "There was a problem when generating the TextGrid files."
+msgstr "Hubo un problema al generar los archivos TextGrid."
+
+msgid "Couldn't open this session!"
+msgstr "¡No se ha podido abrir esta sesión!"
+
 msgid "There is a problem with this recording!"
 msgstr "¡Hay un problema con esta grabación!"
 
-#: controllers/Controller.py:276 models/Session.py:44 models/Session.py:55
-#: models/Tasks.py:34
-msgid "Unknown type of task `{}`."
-msgstr "Tipo desconocido de tarea `{}`."
+msgid "Unable to start the session!"
+msgstr "¡No se puede iniciar la sesión!"
 
-#: models/AbstractDataProvider.py:48
-msgid "Index can only be an integer!"
-msgstr "¡El índice sólo puede ser un entero!"
+msgid "Unknown error!"
+msgstr "¡Error desconocido!"
 
-#: models/AbstractDataProvider.py:49
 msgid "Index can't be negative ({})!"
 msgstr "¡El índice no puede ser negativo ({})!"
 
-#: models/AbstractSession.py:109
+msgid "Index can only be an integer!"
+msgstr "¡El índice sólo puede ser un entero!"
+
+msgid "' ## ' not found on line {}."
+msgstr "' ## ' no se encuentra en la línea {}."
+
+msgid "Error while reading the WAVE file. {}"
+msgstr "Error al leer el archivo WAVE. {}"
+
+msgid "Unknown type of task `{}`."
+msgstr "Tipo desconocido de tarea `{}`."
+
 msgid "Value between existing metadata file and new metadata differ ({} v. {})"
 msgstr ""
 "El valor entre el archivo de metadatos existente y los nuevos metadatos "
 "difiere ({} v. {})"
 
-#: models/Application.py:85
-msgid "Default (English)"
-msgstr "Por defecto (Inglés)"
-
-#: models/DataProviderText.py:32
-msgid "' ## ' not found on line {}."
-msgstr "' ## ' no se encuentra en la línea {}."
-
-#: views/MainView.py:69
-msgid "New Text Elicitation"
-msgstr "Nuevo Texto Elicitado"
-
-#: views/MainView.py:70
-msgid "New Respeaking"
-msgstr "Nueva Regrabación"
-
-#: views/MainView.py:71
-msgid "New"
-msgstr "Nuevo"
-
-#: views/MainView.py:72
-msgid "Open"
-msgstr "Abrir"
-
-#: views/MainView.py:75
-msgid "Recent"
-msgstr "Reciente"
-
-#: views/MainView.py:77
-msgid "Exit"
-msgstr "Salir"
-
-#: views/MainView.py:78
-msgid "File"
-msgstr "Archivo"
-
-#: views/MainView.py:82
-msgid "View Missing Items"
-msgstr "Ver items faltantes"
-
-#: views/MainView.py:85
-msgid "Generate TextGrid"
-msgstr "Generar TextGrid"
-
-#: views/MainView.py:88
 msgid "Data"
 msgstr "Datos"
 
-#: views/MainView.py:93
 msgid "Default Session Directory"
 msgstr "Directorio de Sesion por Defecto"
 
-#: views/MainView.py:94
-msgid "Preferences"
-msgstr "Preferencia"
+msgid "Exit"
+msgstr "Salir"
 
-#: views/MainView.py:98
+msgid "File"
+msgstr "Archivo"
+
+msgid "Generate TextGrid"
+msgstr "Generar TextGrid"
+
 msgid "Language"
 msgstr "Idioma"
 
-#: views/MainView.py:106
-msgid "Record"
-msgstr "Registro"
+msgid "Default ({})"
+msgstr "Por defecto ({})"
 
-#: views/MainView.py:150
-msgid "Play"
-msgstr "Reproducir"
+msgid "View Missing Items"
+msgstr "Ver items faltantes"
 
-#: views/MainView.py:161
-msgid "Respeak"
-msgstr "Volver a hablar"
+msgid "New"
+msgstr "Nuevo"
 
-#: views/MainView.py:191
-msgid "Create a new project or open an existing one."
-msgstr "Crear un nuevo proyecto o abrir uno."
+msgid "New Respeaking"
+msgstr "Nueva Regrabación"
 
-#: views/MainView.py:195
-msgid "Waiting..."
-msgstr "Esperando..."
+msgid "New Text Elicitation"
+msgstr "Nuevo Texto Elicitado"
 
-#: views/MainView.py:279
-msgid "Line: {} | Speaker: {} | Session: {}"
-msgstr "Línea: {} | Hablante: {} | Sesión: {}"
-
-#: views/MainView.py:379 views/MainView.py:391
 msgid "None"
 msgstr "Ninguno"
 
-#: views/MainView.py:382 views/MainView.py:393
+msgid "Open"
+msgstr "Abrir"
+
+msgid "Preferences"
+msgstr "Preferencia"
+
+msgid "Recent"
+msgstr "Reciente"
+
 msgid "Reset"
 msgstr "Reiniciar"
 
-#: views/MainView.py:411
-msgid "Choose a file"
-msgstr "Elegir un archivo"
+msgid "Line: {} | Speaker: {} | Session: {}"
+msgstr "Línea: {} | Hablante: {} | Sesión: {}"
 
-#: views/MainView.py:412
+msgid "Waiting..."
+msgstr "Esperando..."
+
+msgid "Create a new project or open an existing one."
+msgstr "Crear un nuevo proyecto o abrir uno."
+
 msgid "Files"
 msgstr "Archivos"
 
-#: views/MissingView.py:33 views/MissingView.py:70
+msgid "Done! ({} generated, {} failures)\n"
+msgstr "¡Hecho! ({} generados, {} fallos)\n"
+
 msgid "Missing items"
 msgstr "Grabaciones perdidas"
 
-#: views/MissingView.py:51
-msgid "Go"
-msgstr "Ir"
+msgid "Delete this recording?"
+msgstr "¿Borrar esta grabación?"
 
-#: views/MissingView.py:61
-msgid "Cancel"
-msgstr "Cancelar"
+msgid "Enter speaker's name"
+msgstr "Introduzca el nombre del hablante"
+
+msgid "The application will have to restart to apply the changes. Restart?"
+msgstr ""
+"La aplicación tendrá que reiniciarse para aplicar los cambios. ¿Reiniciar?"
+
+msgid "Choose a file"
+msgstr "Elegir un archivo"
+
+msgid "Error!"
+msgstr "¡Error!"
+
+msgid "Information"
+msgstr "Información"
+
+#~ msgid "Speaker?"
+#~ msgstr "¿Hablante?"
