--- a/williaikuma/assets/locales/es/LC_MESSAGES/base.po
+++ b/williaikuma/assets/locales/es/LC_MESSAGES/base.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-16 00:53+0200\n"
-"PO-Revision-Date: 2023-04-16 00:54+0200\n"
+"POT-Creation-Date: 2023-04-20 17:21+0200\n"
+"PO-Revision-Date: 2023-04-20 17:23+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: pygettext.py 1.5\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 2.3\n"
 
 msgid "Cancel"
 msgstr "Cancelar"
@@ -36,8 +36,12 @@ msgstr "Registro"
 msgid "Respeak"
 msgstr "Volver a hablar"
 
-msgid "Couldn't create this session!"
-msgstr "¡No se ha podido crear esta sesión!"
+msgid ""
+"Couldn't create this session!\n"
+"{}"
+msgstr ""
+"¡No se ha podido crear esta sesión!\n"
+"{}"
 
 msgid "There was a problem when generating the TextGrid files."
 msgstr "Hubo un problema al generar los archivos TextGrid."
@@ -48,14 +52,21 @@ msgstr "¡No se ha podido abrir esta sesión!"
 msgid "There is a problem with this recording!"
 msgstr "¡Hay un problema con esta grabación!"
 
-msgid "Unable to start the session!"
-msgstr "¡No se puede iniciar la sesión!"
+msgid ""
+"Unable to start the session!\n"
+"{}"
+msgstr ""
+"¡No se puede iniciar la sesión!\n"
+"{}"
 
 msgid "Unknown error!"
 msgstr "¡Error desconocido!"
 
 msgid "Index can't be negative ({})!"
 msgstr "¡El índice no puede ser negativo ({})!"
+
+msgid "Unknown file type (Accepted types: {})!"
+msgstr "¡Tipo de archivo desconocido (Tipos aceptados: {})!"
 
 msgid "Index can only be an integer!"
 msgstr "¡El índice sólo puede ser un entero!"
@@ -73,6 +84,16 @@ msgid "Value between existing metadata file and new metadata differ ({} v. {})"
 msgstr ""
 "El valor entre el archivo de metadatos existente y los nuevos metadatos "
 "difiere ({} v. {})"
+
+#, fuzzy
+#| msgid "Cannot read CSV file! Make sure field are encloded in `\"`"
+msgid "Cannot read CSV file! Make sure field are enclosed in `\"`"
+msgstr ""
+"No se puede leer el archivo CSV. Asegúrese de que los campos están "
+"encerrados en `\"`."
+
+msgid "Column 'sentence' and/or 'sentence_id' not found in CSV"
+msgstr "Columna 'sentence' y/o 'sentence_id' no encontrada en CSV"
 
 msgid "Data"
 msgstr "Datos"
@@ -122,6 +143,9 @@ msgstr "Reciente"
 msgid "Reset"
 msgstr "Reiniciar"
 
+msgid "Version"
+msgstr "Versión"
+
 msgid "Line: {} | Speaker: {} | Session: {}"
 msgstr "Línea: {} | Hablante: {} | Sesión: {}"
 
@@ -149,6 +173,9 @@ msgstr "Introduzca el nombre del hablante"
 msgid "The application will have to restart to apply the changes. Restart?"
 msgstr ""
 "La aplicación tendrá que reiniciarse para aplicar los cambios. ¿Reiniciar?"
+
+msgid "Version: {}"
+msgstr "Versión: {}"
 
 msgid "Choose a file"
 msgstr "Elegir un archivo"
