--- a/williaikuma/assets/locales/fr/LC_MESSAGES/base.po
+++ b/williaikuma/assets/locales/fr/LC_MESSAGES/base.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-16 00:53+0200\n"
-"PO-Revision-Date: 2023-04-16 00:54+0200\n"
+"POT-Creation-Date: 2023-04-20 17:21+0200\n"
+"PO-Revision-Date: 2023-04-20 17:23+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "Generated-By: pygettext.py 1.5\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 2.3\n"
 
 msgid "Cancel"
 msgstr "Annuler"
@@ -36,8 +36,12 @@ msgstr "Enregistrer"
 msgid "Respeak"
 msgstr "Respeak"
 
-msgid "Couldn't create this session!"
-msgstr "Impossible de créer cette session !"
+msgid ""
+"Couldn't create this session!\n"
+"{}"
+msgstr ""
+"Impossible de créer cette session !\n"
+"{}"
 
 msgid "There was a problem when generating the TextGrid files."
 msgstr "Il y a eu un problème lors de la génération des fichiers TextGrid."
@@ -48,14 +52,21 @@ msgstr "Impossible d'ouvrir cette session !"
 msgid "There is a problem with this recording!"
 msgstr "Il y a un problème avec cet enregistrement !"
 
-msgid "Unable to start the session!"
-msgstr "Impossible de démarrer la session !"
+msgid ""
+"Unable to start the session!\n"
+"{}"
+msgstr ""
+"Impossible de démarrer la session !\n"
+"{}"
 
 msgid "Unknown error!"
 msgstr "Erreur inconnue !"
 
 msgid "Index can't be negative ({})!"
 msgstr "L'index ne peut pas être négatif ({}) !"
+
+msgid "Unknown file type (Accepted types: {})!"
+msgstr "Type de fichier inconnu (types acceptés : {}) !"
 
 msgid "Index can only be an integer!"
 msgstr "L'index ne peut être qu'un nombre entier !"
@@ -73,6 +84,16 @@ msgid "Value between existing metadata file and new metadata differ ({} v. {})"
 msgstr ""
 "La valeur entre le fichier de métadonnées existant et les nouvelles "
 "métadonnées diffère ({} v. {})"
+
+msgid "Cannot read CSV file! Make sure field are enclosed in `\"`"
+msgstr ""
+"Impossible de lire le fichier CSV ! Assurez-vous que les champs sont "
+"entourés de `\"`."
+
+msgid "Column 'sentence' and/or 'sentence_id' not found in CSV"
+msgstr ""
+"Impossible de lire le fichier CSV ! Assurez-vous que les champs sont "
+"entourés de `\"`."
 
 msgid "Data"
 msgstr "Données"
@@ -122,6 +143,9 @@ msgstr "Récent"
 msgid "Reset"
 msgstr "Réinitialiser"
 
+msgid "Version"
+msgstr "Version"
+
 msgid "Line: {} | Speaker: {} | Session: {}"
 msgstr "Ligne : {} | Locuteur : {} | Session : {}"
 
@@ -150,6 +174,9 @@ msgid "The application will have to restart to apply the changes. Restart?"
 msgstr ""
 "L'application devra être redémarrée pour appliquer les changements. "
 "Redémarrer ?"
+
+msgid "Version: {}"
+msgstr "Version : {}"
 
 msgid "Choose a file"
 msgstr "Choisir un fichier"
