--- a/williaikuma/assets/locales/base.pot
+++ b/williaikuma/assets/locales/base.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-20 17:21+0200\n"
+"POT-Creation-Date: 2023-04-21 12:11+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -82,6 +82,9 @@ msgid "Cannot read CSV file! Make sure field are enclosed in `\"`"
 msgstr ""
 
 msgid "Column 'sentence' and/or 'sentence_id' not found in CSV"
+msgstr ""
+
+msgid "Selected path is not writable. Select another one or leave default one."
 msgstr ""
 
 msgid "Data"
@@ -162,7 +165,15 @@ msgstr ""
 msgid "The application will have to restart to apply the changes. Restart?"
 msgstr ""
 
-msgid "Version: {}"
+msgid ""
+"Version: {}\n"
+"Author: {}\n"
+"Contact: {}"
+msgstr ""
+
+msgid ""
+"This session will be created in this directory {}.\n"
+"Change directory?"
 msgstr ""
 
 msgid "Choose a file"
