--- a/williaikuma/assets/locales/es/LC_MESSAGES/base.po
+++ b/williaikuma/assets/locales/es/LC_MESSAGES/base.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-20 17:21+0200\n"
-"PO-Revision-Date: 2023-04-20 17:23+0200\n"
+"POT-Creation-Date: 2023-04-21 12:08+0200\n"
+"PO-Revision-Date: 2023-04-21 12:10+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -85,15 +85,18 @@ msgstr ""
 "El valor entre el archivo de metadatos existente y los nuevos metadatos "
 "difiere ({} v. {})"
 
-#, fuzzy
-#| msgid "Cannot read CSV file! Make sure field are encloded in `\"`"
 msgid "Cannot read CSV file! Make sure field are enclosed in `\"`"
 msgstr ""
 "No se puede leer el archivo CSV. Asegúrese de que los campos están "
-"encerrados en `\"`."
+"encerrados en `\"`"
 
 msgid "Column 'sentence' and/or 'sentence_id' not found in CSV"
 msgstr "Columna 'sentence' y/o 'sentence_id' no encontrada en CSV"
+
+msgid "Selected path is not writable. Select another one or leave default one."
+msgstr ""
+"La ruta seleccionada no es escribible. Seleccione otra o deje la "
+"predeterminada."
 
 msgid "Data"
 msgstr "Datos"
@@ -174,8 +177,21 @@ msgid "The application will have to restart to apply the changes. Restart?"
 msgstr ""
 "La aplicación tendrá que reiniciarse para aplicar los cambios. ¿Reiniciar?"
 
-msgid "Version: {}"
-msgstr "Versión: {}"
+msgid ""
+"Version: {}\n"
+"Author: {}\n"
+"Contact: {}"
+msgstr ""
+"Versión: {}\n"
+"Autor: {}\n"
+"Contacto: {}"
+
+msgid ""
+"This session will be created in this directory {}.\n"
+"Change directory?"
+msgstr ""
+"Esta sesión se creará en este directorio {}.\n"
+"¿Cambiar directorio?"
 
 msgid "Choose a file"
 msgstr "Elegir un archivo"
@@ -185,6 +201,9 @@ msgstr "¡Error!"
 
 msgid "Information"
 msgstr "Información"
+
+#~ msgid "Version: {}"
+#~ msgstr "Versión: {}"
 
 #~ msgid "Speaker?"
 #~ msgstr "¿Hablante?"
