--- a/williaikuma/assets/locales/fr/LC_MESSAGES/base.po
+++ b/williaikuma/assets/locales/fr/LC_MESSAGES/base.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-20 17:21+0200\n"
-"PO-Revision-Date: 2023-04-20 17:23+0200\n"
+"POT-Creation-Date: 2023-04-21 12:08+0200\n"
+"PO-Revision-Date: 2023-04-21 12:11+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -88,12 +88,17 @@ msgstr ""
 msgid "Cannot read CSV file! Make sure field are enclosed in `\"`"
 msgstr ""
 "Impossible de lire le fichier CSV ! Assurez-vous que les champs sont "
-"entourés de `\"`."
+"entourés de `\"`"
 
 msgid "Column 'sentence' and/or 'sentence_id' not found in CSV"
 msgstr ""
 "Impossible de lire le fichier CSV ! Assurez-vous que les champs sont "
 "entourés de `\"`."
+
+msgid "Selected path is not writable. Select another one or leave default one."
+msgstr ""
+"Le chemin sélectionné n'est pas accessible en écriture. Sélectionnez-en un "
+"autre ou laissez celui par défaut."
 
 msgid "Data"
 msgstr "Données"
@@ -175,8 +180,21 @@ msgstr ""
 "L'application devra être redémarrée pour appliquer les changements. "
 "Redémarrer ?"
 
-msgid "Version: {}"
-msgstr "Version : {}"
+msgid ""
+"Version: {}\n"
+"Author: {}\n"
+"Contact: {}"
+msgstr ""
+"Version : {}\n"
+"Auteur : {}\n"
+"Contact : {}"
+
+msgid ""
+"This session will be created in this directory {}.\n"
+"Change directory?"
+msgstr ""
+"Cette session sera créée dans le répertoire {}.\n"
+"Changer de répertoire ?"
 
 msgid "Choose a file"
 msgstr "Choisir un fichier"
@@ -186,6 +204,9 @@ msgstr "Erreur !"
 
 msgid "Information"
 msgstr "Information"
+
+#~ msgid "Version: {}"
+#~ msgstr "Version : {}"
 
 #~ msgid "Speaker?"
 #~ msgstr "Locuteur ?"
